deploy user activation
