# src/controllers/auth.controller.ts
@@ -24,7 +24,25 @@ const registerValidateSchema = Yup.object({
   email: Yup.string()
     .email("Invalid email format")
     .required("Email is required"),
-  password: Yup.string().required("Password is required"),
+  password: Yup.string()
+    .required("Password is required")
+    .min(6, "Password must be at least 6 characters")
+    .test(
+      "at-least-one-uppercase-letter",
+      "Contains at least one uppercase letter",
+      (value) => {
+        if (!value) return false;
+
+        const regex = /^(?=.*[A-Z])/;
+        return regex.test(value);
+      }
+    )
+    .test("at-least-one-number", "Contains at least one number", (value) => {
+      if (!value) return false;
+
+      const regex = /^(?=.*\d)/;
+      return regex.test(value);
+    }),
   confirmPassword: Yup.string()
     .required("Confirm password is required")
     .oneOf([Yup.ref("password"), ""], "Passwords Not match"),
@@ -34,7 +52,11 @@ export default {
   async register(req: Request, res: Response) {
     /**
       #swagger.tags = ['Auth']
-     */
+      #swagger.requestBody = {
+        required:true,
+        schema:{$ref:"#/components/schemas/RegisterRequest"}
+      }
+    */
     const { fullName, username, email, password, confirmPassword } =
       req.body as TRegister;
 
@@ -80,6 +102,7 @@ export default {
     try {
       const userByIdentifier = await UserModel.findOne({
         $or: [{ email: identifier }, { username: identifier }],
+        isActive: true,
       });
 
       if (!userByIdentifier) {
@@ -132,6 +155,42 @@ export default {
       res.status(200).json({
         message: "Success get user profile!",
         data: result,
+      });
+    } catch (error) {
+      const err = error as unknown as Error;
+      res.status(400).json({
+        message: err.message,
+        data: null,
+      });
+    }
+  },
+
+  async activation(req: Request, res: Response) {
+    /**
+      #swagger.tags = ['Auth']
+      #swagger.requestBody = {
+        required:true,
+        schema:{$ref:"#/components/schemas/ActivationRequest"}
+      }
+    */
+    try {
+      const { code } = req.body as { code: string };
+
+      const user = await UserModel.findOneAndUpdate(
+        {
+          activationCode: code,
+        },
+        {
+          isActive: true,
+        },
+        {
+          new: true, // langsung seketika di update
+        }
+      );
+
+      res.status(200).json({
+        message: "User successfully activate",
+        data: user,
       });
     } catch (error) {
       const err = error as unknown as Error;
